unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/LeanData__Opportunity_Campaign_Member__c.object-meta.xml
<CustomObject>
    <label>Opportunity Campaign Member</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Opportunity Campaign Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Campaign Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>