unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__Account__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
    <relationshipName>Opportunity_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>