unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__Campaign__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
    <relationshipName>Opportunity_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>