unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__Campaign_Member_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Campaign_Member_Created_Date__c</fullName>
    <label>Campaign Member Created Date</label>
    <type>DateTime</type>
</CustomField>