unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Campaign_Member_Status__c</fullName>
    <label>Campaign Member Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>