unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__Contact__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
    <relationshipName>Opportunity_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>