unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Contact_Role__c</fullName>
    <label>Contact Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>