unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__Lead__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
    <relationshipName>Opportunity_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>