unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Opportunity_Id__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>