unpackaged/main/default/objects/LeanData__Opportunity_Campaign_Member__c/fields/LeanData__temp_Weighted_Campaign_Member_Attributio__c.field-meta.xml
<CustomField>
    <fullName>LeanData__temp_Weighted_Campaign_Member_Attributio__c</fullName>
    <label>temp Weighted Campaign Member Attributio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>